--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
   margin: 5px;
 }
 
+header {
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+}
+
 .body-container {
   width: 60%;
   display: flex;
